--- a/gradle.properties
+++ b/gradle.properties
@@ -1,7 +1,10 @@
 org.gradle.parallel=true
 kotlin.code.style=official
-kotlinVersion=1.3.31
-springDependencyManagementPluginVersion=1.0.7.RELEASE
-springBootPluginVersion=2.1.5.RELEASE
-springCloudVersion=Greenwich.SR1
-jacksonVersion=2.9.9
+# plugins
+org.jetbrains.kotlin.jvm.version=1.3.72
+org.springframework.boot.version=2.2.6.RELEASE
+# dependencies
+kotlinVersion=1.3.72
+springBootVersion=2.2.6.RELEASE
+springCloudVersion=Hoxton.SR3
+jacksonVersion=2.10.3
